syntax = "proto3";

package com.road.yishi.proto.simple;

message MallItemMsg {
  int32 id = 1;
  int32 templateId = 2;
  int32 userId = 3;
  string nickName = 4;
  int32 point = 5;
  int32 fixPoint = 6;
  int32 hour = 7;
  int32 itemFrom = 8;
  string startTime = 9;
  int32 maxAuctionId = 10;
  string itemInfo = 11;
}
